load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.mpl",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.config",
        "@boost.core",
        "@boost.predef",
        "@boost.preprocessor",
        "@boost.static_assert",
        "@boost.type_traits",
        "@boost.utility",
    ],
)
